k8s/3_traefik-dep.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  namespace: default
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:latest
          args:
            - --api.insecure=true
            - --api.dashboard=true
            - --ping=true
            - --entrypoints.web.Address=:8000
            - --entrypoints.admin.Address=:8080
            - --providers.kubernetescrd
            - --log=true
          ports:
            - name: web
              containerPort: 8000
              protocol: TCP
            - name: admin
              containerPort: 8080
              protocol: TCP
