k8s/5_traefik-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-admin
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/admin`)
    kind: Rule
    priority: 1
    services:
    - name: traefik-admin
      port: 80
